did a whole lot of stuff